--- a/Assist/app/src/main/res/layout/activity_group.xml
+++ b/Assist/app/src/main/res/layout/activity_group.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include6" />
 
     <TextView
-        android:id="@+id/tv_vew_group_name"
+        android:id="@+id/tv_view_group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -49,30 +49,41 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_view_group_members"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+    <TextView
+        android:id="@+id/tv_view_group_members"
+        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:drawableEnd="@android:drawable/arrow_down_float"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:hint="Groups"
+        android:padding="12dp"
+        android:text="Groups"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_group_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_group_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_vew_group_name">
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_group_name" />
 
-        <AutoCompleteTextView
-            android:id="@+id/ac_view_group_members"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+    <Button
+        android:id="@+id/btn_view_group_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#9C1111"
 
-            android:fontFamily="@font/amiko_semibold"
-            android:inputType="none"
-            android:text="Members"
-            android:textColor="@color/gray"
-            android:textSize="18sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Delete Group"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        app:icon="@drawable/deleteicon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl_view_group_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_group_left" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
