--- a/Assist/app/src/main/res/layout/activity_edit_group.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_group.xml
@@ -63,34 +63,29 @@
         app:layout_constraintStart_toStartOf="@+id/gl_edit_group_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_edit_group_add_pic" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_edit_contact_groups"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+    <TextView
+        android:id="@+id/tv_add_group_members"
+        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:drawableEnd="@android:drawable/arrow_down_float"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:hint="Members"
+        android:padding="12dp"
+        android:text="Groups"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_group_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_group_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_group_gname">
-
-        <AutoCompleteTextView
-            android:id="@+id/ac_edit_group_members"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-
-            android:fontFamily="@font/amiko_semibold"
-            android:inputType="none"
-            android:text="Members"
-            android:textColor="@color/gray"
-            android:textSize="18sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_group_gname" />
 
     <Button
-        android:id="@+id/btn_edt_group_delete"
+        android:id="@+id/btn_edit_group_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
