--- a/Assist/app/src/main/res/layout/activity_edit_template.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_template.xml
@@ -27,7 +27,7 @@
 
     <EditText
         android:id="@+id/et_edit_template_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_corner"
@@ -39,8 +39,8 @@
         android:textColor="#374151"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_template_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_template_left"
         app:layout_constraintTop_toBottomOf="@+id/include7" />
 
     <EditText
