--- a/Assist/app/src/main/res/layout/activity_main.xml
+++ b/Assist/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/clear_button"
             android:fontFamily="@font/amiko_bold"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:shadowColor="#000000"
             android:text="@string/calendar"
             android:textColor="@color/blue"
@@ -39,6 +41,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/clear_button"
             android:fontFamily="@font/amiko_bold"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:shadowColor="#000000"
             android:text="@string/contacts"
             android:textColor="@color/blue"
@@ -52,6 +56,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/clear_button"
             android:fontFamily="@font/amiko_bold"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:shadowColor="#000000"
             android:text="@string/groups"
             android:textColor="@color/blue"
@@ -65,6 +71,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/clear_button"
             android:fontFamily="@font/amiko_bold"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:shadowColor="#000000"
             android:text="@string/templates"
             android:textColor="@color/blue"
