--- a/Assist/app/src/main/res/layout/activity_template.xml
+++ b/Assist/app/src/main/res/layout/activity_template.xml
@@ -27,20 +27,22 @@
 
     <TextView
         android:id="@+id/tv_view_template_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
 
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/amiko_bold"
         android:gravity="center_vertical"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:text="Biology Exam #1 Template"
+        android:text="Music Club Orientation Announcement"
         android:textColor="#374151"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl_view_template_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_template_left"
         app:layout_constraintTop_toBottomOf="@+id/include4" />
 
     <TextView
