--- a/Assist/app/src/main/res/layout/activity_add_group.xml
+++ b/Assist/app/src/main/res/layout/activity_add_group.xml
@@ -78,12 +78,22 @@
         android:fontFamily="@font/amiko_semibold"
         android:hint="Members"
         android:padding="12dp"
-        android:text="Groups"
+        android:text="Members"
         android:textColor="@color/gray"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_group_right"
         app:layout_constraintStart_toStartOf="@+id/gl_add_group_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_group_gname" />
+
+    <ListView
+        android:id="@+id/lv_add_group"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_group_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_group_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_group_members"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
