--- a/Assist/app/src/main/res/layout/activity_calendar_day.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_day.xml
@@ -137,11 +137,12 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    
-    <ListView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_day_events"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"/>
+        android:layout_weight="5" />
 
 
 </LinearLayout>
