--- a/Assist/app/src/main/res/layout/activity_event_add.xml
+++ b/Assist/app/src/main/res/layout/activity_event_add.xml
@@ -143,7 +143,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_event_reminder">>
+        app:layout_constraintTop_toBottomOf="@+id/et_add_event_reminder">
 
         <AutoCompleteTextView
             android:id="@+id/ac_edit_event_groups"
