--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -159,28 +159,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_edit_event_groups"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder">>
-        <AutoCompleteTextView
-            android:id="@+id/ac_edit_event_groups"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/amiko_semibold"
-            android:inputType="none"
-            android:text="Groups"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <TextView
         android:id="@+id/tv_edit_to"
         android:layout_width="wrap_content"
@@ -199,9 +177,11 @@
         android:id="@+id/btn_temp_edit_groups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Button"
-        app:layout_constraintStart_toStartOf="@+id/til_edit_event_groups"
-        app:layout_constraintTop_toBottomOf="@+id/til_edit_event_groups" />
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_groups" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/cg_temp_edit_group"
@@ -212,6 +192,27 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_temp_edit_groups">
 
     </com.google.android.material.chip.ChipGroup>
+
+    <TextView
+        android:id="@+id/tv_add_groups"
+        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:drawableEnd="@android:drawable/arrow_down_float"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:hint="Members"
+        android:padding="12dp"
+        android:text="Members"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
