--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -48,7 +48,7 @@
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/include3" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_edit_event_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -58,16 +58,16 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/date"
-        android:inputType="date"
+        android:inputType="none"
         android:padding="3dp"
-        android:text="Wednesday, August 11, 2021"
+        android:textSize="18sp"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_title" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_edit_event_start_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -78,15 +78,15 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/start_time"
-        android:inputType="time"
+        android:inputType="none"
         android:padding="3dp"
-        android:text="7:00 am"
+        android:textSize="18sp"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/tv_edit_to"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_edit_event_end_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -97,9 +97,9 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/end_time"
-        android:inputType="time"
+        android:inputType="none"
         android:padding="3dp"
-        android:text="8:30 am"
+        android:textSize="18sp"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toEndOf="@+id/tv_edit_to"
@@ -159,28 +159,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_edit_event_groups"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder">>
-        <AutoCompleteTextView
-            android:id="@+id/ac_edit_event_groups"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/amiko_semibold"
-            android:inputType="none"
-            android:text="Groups"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <TextView
         android:id="@+id/tv_edit_to"
         android:layout_width="wrap_content"
@@ -199,19 +177,19 @@
         android:id="@+id/btn_temp_edit_groups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="@+id/til_edit_event_groups"
-        app:layout_constraintTop_toBottomOf="@+id/til_edit_event_groups" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/cg_temp_edit_group"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:text="Groups"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/btn_temp_edit_groups">
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder" />
 
-    </com.google.android.material.chip.ChipGroup>
+    <ListView
+        android:id="@+id/lv_edit_event"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_edit_event_delete"
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/btn_temp_edit_groups" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
