--- a/Assist/app/src/main/res/layout/activity_group.xml
+++ b/Assist/app/src/main/res/layout/activity_group.xml
@@ -65,6 +65,18 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_view_group_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_group_left" />
 
+    <TextView
+        android:id="@+id/tv_members_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Members:"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_group_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_group_name" />
+
     <ListView
         android:id="@+id/lv_group"
         android:layout_width="0dp"
@@ -72,6 +84,6 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_view_group_delete"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_group_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_group_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_group_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_members_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
