--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -105,8 +105,8 @@
         app:layout_constraintStart_toEndOf="@+id/tv_edit_to"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />
 
-    <EditText
-        android:id="@+id/et_edit_event_template"
+    <TextView
+        android:id="@+id/tv_edit_event_template"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -115,8 +115,9 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/template"
-        android:inputType="text"
+        android:inputType="none"
         android:padding="3dp"
+        android:textSize="18sp"
         android:text="Biology Exam #1 Template"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
@@ -124,8 +125,8 @@
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_start_time" />
 
-    <EditText
-        android:id="@+id/et_edit_event_reminder"
+    <TextView
+        android:id="@+id/tv_edit_event_reminder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -134,14 +135,15 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/notif_time"
-        android:inputType="text"
+        android:inputType="none"
+        android:textSize="18sp"
         android:padding="3dp"
         android:text="1 hour before"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_template" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_event_template" />
 
     <Button
         android:id="@+id/btn_edit_event_delete"
@@ -201,7 +203,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_event_reminder" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
