--- a/Assist/app/src/main/res/layout/activity_event_add.xml
+++ b/Assist/app/src/main/res/layout/activity_event_add.xml
@@ -23,21 +23,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
-    <EditText
-        android:id="@+id/et_add_event_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/round_corner"
-        android:fontFamily="@font/amiko_semibold"
-        android:hint="@string/event_name"
-        android:inputType="text"
-        android:padding="5dp"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/include2" />
-
     <TextView
         android:id="@+id/tv_add_event_date"
         android:layout_width="0dp"
@@ -92,8 +77,8 @@
         app:layout_constraintStart_toEndOf="@+id/tv_add_to"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_event_date" />
 
-    <EditText
-        android:id="@+id/et_add_event_template"
+    <TextView
+        android:id="@+id/tv_add_event_template"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -102,15 +87,16 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/template"
-        android:inputType="text"
+        android:inputType="none"
         android:padding="3dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_event_start_time" />
 
-    <EditText
-        android:id="@+id/et_add_event_reminder"
+    <TextView
+        android:id="@+id/tv_add_event_reminder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -119,12 +105,12 @@
         android:drawablePadding="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:hint="@string/notif_time"
-        android:inputType="number"
+        android:inputType="none"
         android:padding="3dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_event_template" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_template" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_add_event_mid"
@@ -148,12 +134,28 @@
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_event_date" />
 
+    <EditText
+        android:id="@+id/et_add_event_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/round_corner"
+        android:fontFamily="@font/amiko_semibold"
+        android:hint="@string/event_name"
+        android:inputType="text"
+        android:padding="5dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
+
     <TextView
         android:id="@+id/tv_add_event_groups"
         style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@android:drawable/editbox_background"
         android:drawableEnd="@android:drawable/arrow_down_float"
@@ -166,7 +168,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_event_reminder" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_reminder" />
 
     <ListView
         android:id="@+id/lv_add_event"
@@ -175,7 +177,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_groups" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_groups">
+
+    </ListView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
