--- a/Assist/app/src/main/res/layout/activity_main.xml
+++ b/Assist/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,21 @@
         app:layout_constraintTop_toBottomOf="@+id/include15">
 
         <Button
+            android:id="@+id/btn_home_quick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/clear_button"
+            android:fontFamily="@font/amiko_bold"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:shadowColor="#000000"
+            android:text="@string/quick"
+            android:textColor="@color/blue"
+            android:textSize="18sp"
+            app:backgroundTint="#116ACC" />
+
+        <Button
             android:id="@+id/btn_home_calendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
