--- a/Assist/app/src/main/res/values/styles.xml
+++ b/Assist/app/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <item name="android:width">15dp</item>
         <item name="android:height">15dp</item>
     </style>
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
