--- a/Assist/app/src/main/res/layout/activity_contacts_list.xml
+++ b/Assist/app/src/main/res/layout/activity_contacts_list.xml
@@ -36,11 +36,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_view_clist"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gl_view_clist" />
+        app:layout_constraintTop_toTopOf="@+id/gl_view_clist"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_view_clist_total"
