--- a/Assist/app/src/main/res/layout/activity_contact.xml
+++ b/Assist/app/src/main/res/layout/activity_contact.xml
@@ -117,14 +117,43 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_view_contact_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_contact_left" />
 
+    <ImageView
+        android:id="@+id/iv_view_contact_empty"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:alpha="0.2"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/gl_view_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_contact_guardian"
+        app:srcCompat="@drawable/empty" />
+
+    <TextView
+        android:id="@+id/tv_view_contact_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Groups"
+        android:fontFamily="@font/amiko_semibold"
+        android:textSize="20sp"
+        android:alpha="0.4"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/iv_view_contact_empty"
+        app:layout_constraintStart_toStartOf="@+id/iv_view_contact_empty"
+        app:layout_constraintTop_toBottomOf="@+id/iv_view_contact_empty" />
+
     <ListView
         android:id="@+id/lv_groups"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_contact_right"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_contact_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_groups_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_groups_title"
+        app:layout_constraintVertical_bias="1.0">
+
+    </ListView>
 
     <TextView
         android:id="@+id/tv_groups_title"
@@ -135,6 +164,7 @@
         android:text="Groups:"
         android:textColor="@color/gray"
         android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/gl_view_contact_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_view_contact_guardian" />
 
