--- a/Assist/app/src/main/res/layout/activity_event_view.xml
+++ b/Assist/app/src/main/res/layout/activity_event_view.xml
@@ -116,6 +116,43 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
+    <ImageView
+        android:id="@+id/iv_view_event_empty"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:alpha="0.2"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_reminder"
+        app:srcCompat="@drawable/empty" />
+
+    <TextView
+        android:id="@+id/tv_view_event_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Groups"
+        android:fontFamily="@font/amiko_semibold"
+        android:alpha="0.4"
+        android:visibility="gone"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/iv_view_event_empty"
+        app:layout_constraintStart_toStartOf="@+id/iv_view_event_empty"
+        app:layout_constraintTop_toBottomOf="@+id/iv_view_event_empty" />
+
+    <TextView
+        android:id="@+id/tv_groups_event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Groups:"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_reminder" />
+
     <ListView
         android:id="@+id/lv_event_view"
         android:layout_width="0dp"
@@ -124,7 +161,7 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_reminder">
+        app:layout_constraintTop_toBottomOf="@+id/tv_groups_event">
 
 
     </ListView>
