--- a/Assist/app/src/main/res/layout/activity_calendar_month.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_month.xml
@@ -25,7 +25,7 @@
             android:background="#00FFFFFF"
             android:fontFamily="@font/amiko_bold"
             android:onClick="prevMonth"
-            android:text="prev"
+            android:text="@string/prev_arrow"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -49,7 +49,7 @@
             android:background="#00FFFFFF"
             android:fontFamily="@font/amiko_bold"
             android:onClick="nextMonth"
-            android:text="next"
+            android:text="@string/next_arrow"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
