--- a/Assist/app/src/main/res/values/preloaded_fonts.xml
+++ b/Assist/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amiko_bold</item>
         <item>@font/amiko_semibold</item>
+        <item>@font/basic</item>
     </array>
 </resources>
