edits + auto sms (incomplete)

--- a/Assist/app/src/main/res/layout/activity_calendar_month.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_month.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include9"
-        layout="@layout/toolbar_date" />
+        layout="@layout/toolbar" />
 
 
     <LinearLayout
